Fixed some very weird error with Date type in safari

--- a/index.html
+++ b/index.html
@@ -107,35 +107,35 @@
         <select id="WeekSelect" oninput="init()">
           <option
             value="2018_09_1q"
-            startDate="2018-08-31 22:00:00"
+            startDate="2018/08/31 22:00:00"
             hours="336"
           >
             1-15 sep. 2018</option
           >
           <option
             value="2018_09_2q"
-            startDate="2018-09-14 22:00:00"
+            startDate="2018/09/14 22:00:00"
             hours="384"
           >
             16-30 sep. 2018</option
           >
           <option
             value="2018_10_1q"
-            startDate="2018-09-30 22:00:00"
+            startDate="2018/09/30 22:00:00"
             hours="336"
           >
             1-15 oct. 2018</option
           >
           <option
             value="2018_10_2q"
-            startDate="2018-10-14 22:00:00"
+            startDate="2018/10/14 22:00:00"
             hours="385"
           >
             16-31 oct. 2018
           </option>
           <option
             value="2018_10_1q"
-            startDate="2018-10-31 23:00:00"
+            startDate="2018/10/31 23:00:00"
             hours="336"
           >
             1-15 nov. 2018</option
