--- a/index.html
+++ b/index.html
@@ -260,8 +260,9 @@
         </div>
       </div>
       <button class="collapsible">
-        <span class="fas fa-magic fa-lg"></span>
-        <span class="fas fa-hourglass-half fa-lg"></span>
+        <!-- <span class="fas fa-magic fa-lg"></span>
+        <span class="fas fa-hourglass-half fa-lg"></span> -->
+        Timeline filter
       </button>
       <div class="content">
         <div class="row">
